--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   provider: ^6.0.5
   http: ^1.2.2
   badges: ^3.1.2
+  supabase_flutter: ^2.8.1
 
 
   # The following adds the Cupertino Icons font to your application.
